@@ -280,6 +280,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP3100 (EXPERIMENTAL)
        Canon PIXMA iP4700
        Canon PIXMA iP4800 (EXPERIMENTAL)
+       Canon PIXMA iP6100D
+       Canon PIXMA iP6600D
        Canon PIXMA iX6500 (EXPERIMENTAL)
        Canon PIXMA iX7000 (EXPERIMENTAL)
        Canon PIXMA MG5100
@@ -302,6 +304,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP810 (EXPERIMENTAL)
        Canon PIXMA MP950
        Canon PIXMA MP960
+       Canon PIXMA MP980 (EXPERIMENTAL)
        Canon PIXMA MP990
        Canon PIXMA MX300 (EXPERIMENTAL)
        Canon PIXMA MX310 (EXPERIMENTAL)
